# goit_web_unit7_socket_server_client

./: LICENSE  README.md  pyproject.toml  socket_client.py  socket_server.py
